--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <div class='profile'>
+    </div>
         <h6>Profile Name</h6>
         <div class='address'>Address</div>
 
@@ -17,15 +18,15 @@
 
         <div class='categories'>
           <h2>Categories</h2>
-          <li>
-            <ul>Lorem ipsum</ul>
-            <ul>dolor sit</ul>
-            <ul>amet</ul>
-            <ul>dolor sit</ul>
-          </li>
+          <ul>
+            <li>Lorem ipsum</li>
+            <li>dolor sit</li>
+            <li>amet</li>
+            <li>dolor sit</li>
+          </ul>
         </div>
 
-      </div>
+      
 
       <div id='biography'>
         <p>
